# multimodal-translation-teleop

./: .gitignore  README.md  index.html
Transteleop/: shadow_demo.py  shadow_demo_moveit.py  test.py  test_joint.py  train.py  train_joint.py
Transteleop/data/: __init__.py  base_dataset.py  joint_dataset.py
Transteleop/models/: aejoint_model.py  base_model.py  networks.py  pix2pix_model.py
Transteleop/options/: base_options.py  demo_options.py  test_options.py  train_options.py
Transteleop/scripts/: Receptive_Field_Calculator.py  ae_joint_train.sh  demo_moveit.sh  test_aejoint.sh  test_pix2pix.sh  train_pix2pix.sh
Transteleop/util/: __init__.py  seg.py
eval/: draw_weight_map.py  eval_error_bar.py  eval_trans_angle.py  eval_trans_dis.py  img_catesian2uvd.py  result_vis.py  test_moveit_joints_demo.py  uvd_draw.py
preprocess/: __init__.py  crop_shadow_depth.py  depth2normalmap.py  human_robot_combine_A_and_B.py  keypoint_weights_generation.py  seg.py  seg_depth.py  seg_depth_uv.py  seg_label.py  ulti.py
preprocess/deep_prior_hand_crop/: basetypes.py  bighand_preprocess.py  dataset.py  handdetector.py  importers.py  readme.md
ros/trans_robot/: CMakeLists.txt  package.xml
ros/trans_robot/launch/: shadow_fk.launch
ros/trans_robot/src/: shadow_forward_kinematics.cpp
teleop/: style.css
