<?xml version="1.0"?>
<package format="2">
  <name>trans_robot</name>
  <version>0.0.0</version>
  <description>The shadow_transteleop package</description>

  <maintainer email="sli@informatik.uni-hamburg.de">sli</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
</package>